<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="order">Orders</string>
    <string name="wish">Wish List</string>
    <string name="myOrder">My Orders</string>
    <string name="myOrderText">Your order is confirmed</string>
    <string name="myOrderText2">The Merchant of Venice</string>
    <string name="wait_for_confirmation">Wait for confirmation</string>
    <string name="guruGeethaya">Guru Geethaya</string>
    <string name="MadolDuuwa">Madol Duuwa</string>
    <string name="goToCart">Go To Cart</string>
    <string name="cart">Cart</string>
    <string name="cart2">Guru Geethaya</string>
    <string name="cart21">Chinghiz Aitmatov</string>
    <string name="cart22">Rs 150.00</string>
    <string name="checkOutBtn">CHECK OUT</string>
    <string name="totalPrice">Rs 150.00</string>
    <string name="itemSelected">Item Selected (1)</string>
    <string name="cart3">Amma</string>
    <string name="textView7">Maxim Gorky</string>
    <string name="cart4">The Count of Monte Cristo 1</string>
    <string name="textView6">Alexandre Duma</string>
    <string name="cart32">Rs 450.00</string>
    <string name="cart42">Rs 350.00</string>
    <string name="orderConfirmation">Order Confirmation</string>
    <string name="address">Address</string>
    <string name="button2">CHANGE</string>
    <string name="billingDetails">Billing Details</string>
    <string name="paymentMethod">SELECT PAYMENT METHOD</string>
    <string name="subTotal">Sub Total</string>
    <string name="shippingfee">Shipping fee</string>
    <string name="subTotal2">Total</string>
    <string name="totalRs">Rs 300.00</string>
    <string name="orderSummary">Order Summary(1 Item)</string>
    <string name="discount">Discount</string>
    <string name="grandTotal">Grand Total</string>
    <string name="discount1">Rs 0.00</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="billingHeader">Billing Address</string>
    <string name="billingDetailsHeader">Billing Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="viewOrder1">Customer Orders</string>
    <string name="searchorderid">Search Order ID..</string>
    <string name="confirmBtn">CONFIRM ORDER</string>
    <string name="textView14">Martin Wickramasinghe</string>
</resources>