<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".OrdersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/myOder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myOrder"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.213" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/myOrderText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myOrderText"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/myOrderText2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="101dp"
                android:layout_height="60dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/myOrderText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myOrderText2"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/myOrderText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_for_confirmation"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.59"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.073" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="101dp"
                android:layout_height="60dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/myOrderText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guruGeethaya"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/myOrderText3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/myOrderText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myOrderText"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.623"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="101dp"
                android:layout_height="60dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/myOrderText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MadolDuuwa"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/myOrderText5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/gotocartbtn"
                android:layout_width="196dp"
                android:layout_height="44dp"
                android:background="@color/colorAccent"
                android:text="@string/goToCart"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.882" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</RelativeLayout>